--- a/package.json
+++ b/package.json
@@ -2,6 +2,27 @@
   "name": "cve",
   "dependencies": {
       "express": "4.17.2",
-      "lodash": "4.17.20"
+      "lodash": "4.17.20",
+      "bunyan": "1.7.15",
+      "cacache": "16.1.0",
+      "chalk": "4.1.2",
+      "changelog-filename-regex": "2.0.1",
+      "clean-git-ref": "2.0.1",
+      "commander": "9.2.0",
+      "conventional-commits-detector": "1.0.3",
+      "crypto-random-string": "3.3.1",
+      "deepmerge": "4.2.2",
+      "delay": "4.0.0",
+      "dequal": "2.0.1",
+      "detect-indent": "6.1.0",
+      "editorconfig": "0.15.3",
+      "email-addresses": "5.0.0",
+      "emoji-regex": "10.1.0",
+      "emojibase": "6.1.0",
+      "emojibase-regex": "6.0.1",
+      "extract-zip": "2.0.1",
+      "fast-safe-stringify": "2.0.0",
+      "find-packages": "8.1.0",
+      "find-up": "5.0.0"
   }
 }
